# cargo-aoc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: assert.rs  bench.rs  clippy.rs  error.rs  main.rs  run.rs  setup.rs  tally.rs  test.rs  token.rs
src/util/: file.rs  mod.rs  request.rs  submit.rs  tally_util.rs
template/: Cargo.toml.template  template.rs
