[package]
name = "cargo-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive", "cargo", "string"] }
dotenv = "0.15.0"
reqwest = "0.11.13"
sanitize_html = "0.7.0"
strip-ansi-escapes = "0.1.1"
tokio = { version = "1.22.0", features = ["full"] }
