[package]
name = "cargo-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive", "cargo", "string"] }
dotenv = "0.15.0"
reqwest = "0.11.13"
serde = "1.0.148"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.22.0", features = ["full"] }

sanitize_html = { version = "0.8.0", optional = true }
criterion = { version = "0.5.1", optional = true }
indicatif = { version = "0.17.2", optional = true }
duct = "0.13.6"
thiserror = "1.0.50"


[features]
default = ["bench", "tally", "submit"]
bench = ["criterion"]
tally = ["indicatif"]
submit = ["sanitize_html"]
